fix text overflow

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -28,6 +28,7 @@ body {
     animation: moveBackground 60s linear infinite;
 
     font-family: 'Roboto', sans-serif;
+    max-width: 100vw;
 }
 
 img {
@@ -87,6 +88,10 @@ p {
     color: #333;
     text-align: center;
     margin-top: 1rem;
+    overflow-wrap: break-word;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80vw;
 }
 
 hr {
